--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,16 @@
 .parant .my-svg-icon{
     fill:url(#paint0_linear_1_881);
 }
+
+
+.transition{
+    transition: .6s;
+}
+
+.parant .my-arrow-svg{
+    fill: white;
+}
+
+.parant:hover .my-arrow-svg{
+    fill:url(#paint0_linear_41_897);
+}
