--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
 
+
+/* Define custom properties for font weights and styles */
+body {
+    font-family: "Poppins", sans-serif;
+  }
+ 
 
 .parant:hover .my-svg-icon{
     fill:url(#paint0_linear_1_808);
@@ -14,7 +19,7 @@
 
 
 .transition{
-    transition: .6s;
+    transition: .4s;
 }
 
 .parant .my-arrow-svg{
@@ -28,3 +33,23 @@
 ::-webkit-scrollbar {
     display: none;
   }
+
+  .fade-text {
+    position: relative;
+}
+
+.fade-text::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to right, transparent, black);
+    opacity: 0.5; 
+    pointer-events: none; 
+}
+
+.fade-text > div {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
+}
