add modal for redeem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  scrollbar-width: none !important;
+  -ms-overflow-style: none;
+}
+.hideScrollBar{
+  scrollbar-width: none !important;
+}
+
 .parant:hover .my-svg-icon {
   fill: url(#paint0_linear_1_808);
 }
