--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ body {
   scrollbar-width: none !important;
   -ms-overflow-style: none;
 }
-.hideScrollBar{
+.hideScrollBar {
   scrollbar-width: none !important;
 }
 
@@ -122,4 +122,22 @@ input[type="number"] {
 .bet-slip-exit-active {
   transform: translateX(100%);
   opacity: 0;
+}
+
+.tooltip::before {
+  position: absolute;
+  content: "";
+  height: 10px;
+  width: 10px;
+  background: #232121;
+  top: -5px;
+  left: 50%;
+  border: solid 1px;
+  border-right: 0px;
+  border-bottom: 0px;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, 0.55, 0.265, 1.55);
+}
+.tooltip {
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
