--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,20 +124,6 @@ input[type="number"] {
   opacity: 0;
 }
 
-.tooltip::before {
-  position: absolute;
-  content: "";
-  height: 10px;
-  width: 10px;
-  background: #232121;
-  top: -5px;
-  left: 50%;
-  border: solid 1px;
-  border-right: 0px;
-  border-bottom: 0px;
-  transform: translate(-50%) rotate(45deg);
-  transition: all 0.3s cubic-bezier(0.68, 0.55, 0.265, 1.55);
-}
-.tooltip {
+.betPlacedText {
   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
