sidebar and icons issue fixed in safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,3 +127,7 @@ input[type="number"] {
 .betPlacedText {
   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
+
+.webkit-overflow-scrolling-touch {
+  -webkit-overflow-scrolling: touch !important;
+}
