--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  scrollbar-width: none !important;
-  -ms-overflow-style: none;
-}
+
 .hideScrollBar {
   scrollbar-width: none !important;
 }
@@ -130,4 +127,8 @@ input[type="number"] {
 
 .webkit-overflow-scrolling-touch {
   -webkit-overflow-scrolling: touch !important;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
