--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,3 +159,13 @@ input[type="number"] {
     left: 50%;
   }
 }
+
+
+@keyframes pulse {
+  50% {
+      opacity: .5;
+  }
+}
+.animatePulse {
+  animation: pulse .7s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
